--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 polybar/.config/polybar/scripts/savednews/*
 spotify-tui/.config/spotify-tui/client.yml
+spotify-tui/.config/spotify-tui/.spotify_token_cache.json
 spotifyd/.config/spotifyd/spotifyd.conf
