--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -230,5 +230,5 @@ for_window [window_type="dialog"] floating enable
 for_window [window_type="menu"] floating enable
 for_window [class="steam_app_*"] floating disable
 for_window [class="steam_app_*"] border none
-assign [class="steam_app_*"] $ws6
+# assign [class="steam_app_*"] $ws6
 assign [class="Steam"] $ws5
