--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 polybar/.config/polybar/scripts/savednews/*
+polybar/.config/polybar/scripts/news
 spotify-tui/.config/spotify-tui/client.yml
 spotify-tui/.config/spotify-tui/.spotify_token_cache.json
 spotifyd/.config/spotifyd/spotifyd.conf
