--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -233,3 +233,4 @@ for_window [class="steam_app_*"] floating enable
 for_window [class="steam_app_*"] border none
 for_window [instance="^origin.exe$" class="Wine"] floating enable, fullscreen disable
 assign [class="Steam"] $ws5
+assign [class="Skype"] $ws9
