--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,7 +13,7 @@ exec_always --no-startup-id nitrogen --restore &
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id spotifyd &
 
-exec_always --no-startup-id setxkbmap -option caps:ctrl_modifier &
+exec_always --no-startup-id setxkbmap -option ctrl:nocaps &
 
 ### System #############################
 
