--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -8,7 +8,7 @@ set $menu "rofi -combi-modi 'drun,window,run' -show combi -modi combi -lines 10 
 
 ### Autostart ##########################
 exec_always --no-startup-id picom -b --experimental-backends &
-exec_always --no-startup-id pulseeffects --gapplication-service &
+exec_always --no-startup-id easyeffects --gapplication-service &
 exec_always --no-startup-id nitrogen --restore &
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always --no-startup-id spotifyd &
