--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,7 +1,7 @@
 /* BOGSTERISH */
 
 /* Base0 */
-background #161C23 
+background #131415 
 
 /* FG2 */
 foreground #C7B8AE
@@ -14,34 +14,34 @@ color0 #313F4E
 color8 #415368
 
 /* Red */
-color1 #F34473
-color9 #DC5B80
+color1 #D27979
+color9 #D27979
 
 /* Green */
-color2  #6BE156
-color10 #83E85E
+color2  #88D279
+color10 #88D279
 
 /* Yellow */
-color3  #EBCF47
-color11 #F2A145
+color3  #D2C479
+color11 #D29E79
 
 /* Blue */
-color4  #5BC0DC
+color4  #5BDCD8
 color12 #5BDCD8
 
 /* Purple */
-color5  #C560E6
-color13 #DC5BC0
+color5  #D279D2
+color13 #D279D2
 
 /* Cyan */
-color6  #2DD2A3
-color14 #5BDCB8
+color6  #79D2A6
+color14 #79D2A6
 
 /* Gray/FG0 */
-color7  #C7B8AE
+color7  #C2BDA3
 
 
 /* Base1 */
 selection_foreground None
-selection_background #232E38
+selection_background #35363B 
 
