--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -12,7 +12,8 @@ enable_audio_bell no
 
 include ./theme.conf
 
-background_opacity 0.98
+# background_opacity 0.98
+background_opacity 0.90
 repaint_delay 7
 input_delay 2
 
