--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ bold_font Hack Bold Nerd Font Complete Mono
 bold_italic_font Hack Bold Italic Nerd Font Complete Mono
 italic_font Hack Italic Nerd Font Complete Mono
 
-font_size 10
+font_size 9
 
 sync_to_monitor yes
 disable_ligatures never
@@ -19,3 +19,6 @@ input_delay 2
 
 map ctrl+backspace send_text all \x17
 symbol_map U+f101-U+f208 nonicon
+
+adjust_column_width 0
+adjust_line_height 1
