--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,7 +1,9 @@
 /* BOGSTERISH */
 
 /* Base0 */
-background #131415 
+/* background #131415  */
+background #0C0C0D 
+
 
 /* FG2 */
 foreground #C2BDA3
