--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -5,6 +5,7 @@ set $up k
 set $right l
 set $term kitty
 set $menu "rofi -combi-modi 'drun,window,run' -show combi -modi combi -lines 10 -hide-scrollbar"
+set $browser firefox-beta
 
 ### Autostart ##########################
 exec_always --no-startup-id picom -b --experimental-backends &
@@ -26,11 +27,14 @@ bindsym $mod+Shift+r restart
 
 ### Launch #############################
 
-# Terminal
+# WanabeDWM
 bindsym $mod+Return         exec --no-startup-id $HOME/.config/i3/scripts/i3-send-master
 
-# Browser
+# Terminal
 bindsym $mod+Shift+Return   exec --no-startup-id $term
+
+# Browser
+bindsym $mod+Control+Return exec --no-startup-id $browser
 
 # Launcher
 bindsym $mod+d              exec --no-startup-id $menu
