--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ polybar/.config/polybar/scripts/news
 spotify-tui/.config/spotify-tui/client.yml
 spotify-tui/.config/spotify-tui/.spotify_token_cache.json
 spotifyd/.config/spotifyd/spotifyd.conf
+
+kitty/.config/kitty/active.conf
