--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@ bold_font Hack Bold Nerd Font Complete Mono
 bold_italic_font Hack Bold Italic Nerd Font Complete Mono
 italic_font Hack Italic Nerd Font Complete Mono
 
-font_size 9
+include ./active.conf
 
 sync_to_monitor yes
 disable_ligatures never
