clean journalctl from kitty theme logs

--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,49 +1,49 @@
-/* BOGSTERISH */
+# BOGSTERISH */
 
-/* Base0 */
-/* background #131415  */
+# Base0 */
+# background #131415  */
 background #0C0C0D 
 
 
-/* FG2 */
+# FG2 */
 foreground #C2BDA3
 
-/* Blue */
+# Blue */
 cursor #5BC0DC
 
-/* Black */
+# Black */
 color0 #313F4E
 color8 #415368
 
-/* Red */
+# Red */
 color1 #D27979
 color9 #D27979
 
-/* Green */
+# Green */
 color2  #88D279
 color10 #88D279
 
-/* Yellow */
+# Yellow */
 color3  #D2C479
 color11 #D29E79
 
-/* Blue */
+# Blue */
 color4  #5BDCD8
 color12 #5BDCD8
 
-/* Purple */
+# Purple */
 color5  #D279D2
 color13 #D279D2
 
-/* Cyan */
+# Cyan */
 color6  #79D2A6
 color14 #79D2A6
 
-/* Gray/FG0 */
+# Gray/FG0 */
 color7  #C2BDA3
 
 
-/* Base1 */
+# Base1 */
 selection_foreground None
 selection_background #35363B 
 
