--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -8,8 +8,7 @@ background #0C0C0D
 # FG2 */
 foreground #C2BDA3
 
-# Blue */
-cursor #5BC0DC
+cursor #D2C479
 
 # Black */
 color0 #313F4E
@@ -41,7 +40,6 @@ color14 #79D2A6
 
 # Gray/FG0 */
 color7  #C2BDA3
-
 
 # Base1 */
 selection_foreground None
