dev-idk theme update

--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,47 +1,40 @@
-# BOGSTERISH */
+background #0A0E1F 
+foreground #ACB3D2
 
-# Base0 */
-# background #131415  */
-background #0C0C0D 
-
-
-# FG2 */
-foreground #C2BDA3
-
-cursor #D2C479
+cursor #DBC970
 
 # Black */
-color0 #313F4E
-color8 #415368
+color0 #131939
+color8 #131939
 
 # Red */
-color1 #D27979
-color9 #D27979
+color1 #DB7070
+color9 #DB7070
 
 # Green */
-color2  #88D279
-color10 #88D279
+color2  #82DB70
+color10 #82DB70
 
 # Yellow */
-color3  #D2C479
-color11 #D29E79
+color3  #EB8B47
+color11 #EB8B47
 
 # Blue */
-color4  #5BDCD8
-color12 #5BDCD8
+color4  #70C9DB
+color12 #70C9DB
 
 # Purple */
-color5  #D279D2
-color13 #D279D2
+color5  #9470DB
+color13 #9470DB
 
 # Cyan */
-color6  #79D2A6
-color14 #79D2A6
+color6  #70DBA6
+color14 #70DBA6
 
 # Gray/FG0 */
-color7  #C2BDA3
+color7  #7A85B8
 
 # Base1 */
 selection_foreground None
-selection_background #35363B 
+selection_background #202A60 
 
