--- a/zsh/.zsh/assets/vividtheme.yml
+++ b/zsh/.zsh/assets/vividtheme.yml
@@ -1,17 +1,17 @@
 colors:
-  background_color: '0C0C0D'
-  white: 'C2BDA3'
-  red: 'D27979'
-  green: '88D279'
-  yellow: 'D2C479'
-  blue: '79C4D2'
-  pink: 'D279D2'
-  cyan: '79D2A6'
+  background_color: '0D1126'
+  white: 'ACB3D2'
+  red: 'DB7070'
+  green: '82DB70'
+  yellow: 'DBC970'
+  blue: '70C9DB'
+  pink: '9470DB'
+  cyan: '70DBA6'
 
   black: '000000'
-  gray: '999999'
-  darkgray: '666666'
-  darkergray: '333333'
+  gray: '3D4B8F'
+  darkgray: '3B4EAF'
+  darkergray: '344498'
 
 core:
   regular_file: {}
