--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ spotify-tui/.config/spotify-tui/.spotify_token_cache.json
 spotifyd/.config/spotifyd/spotifyd.conf
 
 kitty/.config/kitty/active.conf
+
+picom/.config/picom/picom.conf
