--- a/picom/.config/picom/laptop.conf
+++ b/picom/.config/picom/laptop.conf
@@ -1,8 +1,12 @@
 vsync = true;
 dbe = true;
 backend = "glx";
-refresh-rate = 60;
+
+glx-no-stenctil = true;
+
+refresh-rate = 59.95;
 unredir-if-possible = true;
+
 /* blur: {
     method = "gaussian";
     size = 10;
