--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,3 +1,8 @@
+# font_family Hack Regular Nerd Font Complete Mono
+# bold_font Hack Bold Nerd Font Complete Mono
+# bold_italic_font Hack Bold Italic Nerd Font Complete Mono
+# italic_font Hack Italic Nerd Font Complete Mono
+
 font_family Hack Regular Nerd Font Complete Mono
 bold_font Hack Bold Nerd Font Complete Mono
 bold_italic_font Hack Bold Italic Nerd Font Complete Mono
