alacritty -> kitty again

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -3,7 +3,7 @@ set $left h
 set $down j
 set $up k
 set $right l
-set $term alacritty
+set $term kitty
 set $menu "rofi -combi-modi 'drun,window,run' -show combi -modi combi -lines 10 -hide-scrollbar"
 set $browser firefox-beta
 
