--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,10 +3,7 @@
 # bold_italic_font Hack Bold Italic Nerd Font Complete Mono
 # italic_font Hack Italic Nerd Font Complete Mono
 
-font_family Hack Regular Nerd Font Complete Mono
-bold_font Hack Bold Nerd Font Complete Mono
-bold_italic_font Hack Bold Italic Nerd Font Complete Mono
-italic_font Hack Italic Nerd Font Complete Mono
+font_family JetBrainsMono Nerd Font Mono
 
 include ./active.conf
 
@@ -19,11 +16,11 @@ include ./theme.conf
 
 # background_opacity 0.98
 background_opacity 1
-repaint_delay 7
-input_delay 2
+# repaint_delay 7
+# input_delay 2
 
 map ctrl+backspace send_text all \x17
-symbol_map U+f101-U+f208 nonicon
+# symbol_map U+f101-U+f208 nonicon
 
-adjust_column_width 0
-adjust_line_height 1
+# adjust_column_width 0
+# adjust_line_height 1
