--- a/alacritty/.config/alacritty/desktop.yml
+++ b/alacritty/.config/alacritty/desktop.yml
@@ -15,17 +15,17 @@ Scrolling:
 
 font:
   normal:
-    family: "Iosevka Term"
+    family: "JetBrainsMono Nerd Font"
   bold:
-    family: "Iosevka Term"
+    family: "JetBrainsMono Nerd Font"
     style: Bold
   italic:
-    family: "Iosevka Term"
+    family: "JetBrainsMono Nerd Font"
     style: Italic
   bold_italic:
-    family: "Iosevka Term"
+    family: "JetBrainsMono Nerd Font"
     style: Bold Italic
-  size: 9
+  size: 9 
 
 key_bindings: 
   - {key: Back, mods: Control, chars: "\x17"}
