--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -24,3 +24,6 @@ map ctrl+backspace send_text all \x17
 
 # adjust_column_width 0
 # adjust_line_height 1
+
+map kitty_mod+space show_scrollback
+scrollback_pager bash -c 'nvim </dev/null -c "map q :qa!<CR>" -c "autocmd TermOpen * normal G" -c "terminal cat /proc/$$/fd/0 -" -c "set clipboard+=unnamedplus" -c "call cursor(CURSOR_LINE, CURSOR_COLUMN)"'
