--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,40 +1,40 @@
-background #0A0E1F 
-foreground #ACB3D2
+background #0C141D
+foreground #D2C2AC
 
-cursor #DBC970
+cursor #E49B67
 
 # Black */
-color0 #131939
-color8 #131939
+color0 #364A63
+color8 #364A63
 
 # Red */
-color1 #DB7070
-color9 #DB7070
+color1 #E47267
+color9 #E47267
 
 # Green */
-color2  #82DB70
-color10 #82DB70
+color2  #A1E87D
+color10 #A1E87D
 
 # Yellow */
-color3  #EB8B47
-color11 #EB8B47
+color3  #E4CF67
+color11 #E4CF67
 
 # Blue */
-color4  #70C9DB
-color12 #70C9DB
+color4  #67A0E4
+color12 #67A0E4
 
 # Purple */
-color5  #9470DB
-color13 #9470DB
+color5  #9B67E4
+color13 #9B67E4
 
 # Cyan */
-color6  #70DBA6
-color14 #70DBA6
+color6  #67E4A6
+color14 #67E4A6
 
 # Gray/FG0 */
-color7  #7A85B8
+color7  #506F95
 
 # Base1 */
 selection_foreground None
-selection_background #202A60 
+selection_background #243142
 
