laptop rice picom

--- a/picom/.config/picom/laptop.conf
+++ b/picom/.config/picom/laptop.conf
@@ -7,11 +7,12 @@ glx-no-stenctil = true;
 refresh-rate = 59.95;
 unredir-if-possible = true;
 
-/* blur: {
-    method = "gaussian";
-    size = 10;
-    deviation = 5.0;
-} */
+blur: {
+    method = "dual_kawase";
+    # size = 10;
+    deviation = true;
+}
+
 unredir-if-possible-exclude = [
     "class_g = 'looking-glass-client' && !focused"
 ]
