--- a/picom/.config/picom/desktop.conf
+++ b/picom/.config/picom/desktop.conf
@@ -3,11 +3,11 @@ vsync = true;
 backend = "glx";
 refresh-rate = 120;
 unredir-if-possible = true;
-/* blur: {
-    method = "gaussian";
-    size = 10;
-    deviation = 5.0;
-} */
+blur: {
+    method = "dual_kawase";
+    # size = 10;
+    deviation = true;
+}
 unredir-if-possible-exclude = [
     "class_g = 'looking-glass-client' && !focused"
 ]
