--- a/picom/.config/picom/desktop.conf
+++ b/picom/.config/picom/desktop.conf
@@ -1,5 +1,5 @@
 vsync = true;
-/* dbe = true; */
+dbe = true;
 backend = "glx";
 refresh-rate = 120;
 unredir-if-possible = true;
@@ -11,3 +11,13 @@ blur: {
 unredir-if-possible-exclude = [
     "class_g = 'looking-glass-client' && !focused"
 ]
+
+shadow = true;
+#shadow-radius = 10;
+#shadow-offset-x = -5;
+#shadow-offset-y = -5;
+#shadow-opacity = 1;
+
+fading = true;
+fade-delta = 2;
+fade-in-step = 0.08;
