--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,7 +1,7 @@
 [colors]
-background = #131415
+background = #AA101010
 background-alt = #35363B 
-foreground = #DBD6BD
+foreground = #FFFFFF
 foreground-alt = #79C4D2
 foreground-dark = "#627D9D"
 ; foreground-alt = #F34473
@@ -13,10 +13,13 @@ teal = #2DD2A3
 [bar/main]
 monitor = ${env:MONITOR:DisplayPort-0}
 width = 100%
-height = 27
-radius = 6.0
+height = 24
+radius = 0.0
 fixed-center = true
-bottom = true
+bottom = false
+
+border-bottom-size = 1
+border-bottom-color = #35363B
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -31,9 +34,9 @@ module-margin-left = 1
 module-margin-right = 1 
 
 
-font-0 = Nimbus Sans:size=10:antialias=true;1
-font-1 = fixed:pixelsize=10;1
-font-2 = Nimbus Sans Bold:size=10:style=Bold:antialias=true;1
+font-0 = SF Pro Text:size=10:antialias=true;3
+; font-1 = fixed:pixelsize=10;1
+font-2 = SF Pro Text:size=10:style=Bold:antialias=true;3
 ; font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 ; font-2 = siji:pixelsize=10;1
 
