theme update reflects nvim

--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,11 +1,11 @@
-background #0C141D
+background #141414
 foreground #D2C2AC
 
-cursor #E49B67
+cursor #D2C2AC
 
 # Black */
-color0 #364A63
-color8 #364A63
+color0 #212121
+color8 #212121
 
 # Red */
 color1 #E47267
@@ -32,9 +32,8 @@ color6  #67E4A6
 color14 #67E4A6
 
 # Gray/FG0 */
-color7  #506F95
+color7  #808080
 
 # Base1 */
 selection_foreground None
-selection_background #243142
-
+selection_background #333333
