--- a/picom/.config/picom/desktop.conf
+++ b/picom/.config/picom/desktop.conf
@@ -1,23 +1,45 @@
-vsync = true;
+vsync = false;
 dbe = true;
 backend = "glx";
-refresh-rate = 120;
+refresh-rate = 144;
 unredir-if-possible = true;
 blur: {
     method = "dual_kawase";
     # size = 10;
-    deviation = true;
+    # deviation = true;
 }
+
+opacity-rule = [ 
+  "95:class_g = 'URxvt' && !_NET_WM_STATE@:32a",
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
+];
+
 unredir-if-possible-exclude = [
     "class_g = 'looking-glass-client' && !focused"
 ]
+
+shadow-exclude = [
+  "class_g = 'i3-frame'",
+  "class_g = 'Rofi'"
+];
+
+/* blur-background-exclude = [
+  "class_g = 'Rofi'"
+] */
+
+/* fade-exclude = [
+  "class_g = 'Rofi'"
+] */
+
 
 shadow = true;
 #shadow-radius = 10;
 #shadow-offset-x = -5;
 #shadow-offset-y = -5;
 #shadow-opacity = 1;
+shadow-ignore-shaped = true;
+detect-rounded-corners = true;
 
 fading = true;
-fade-delta = 2;
-fade-in-step = 0.08;
+fade-delta = 3;
+#fade-in-step = 0.01;
