--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -14,7 +14,7 @@ enable_audio_bell no
 
 include ./theme.conf
 
-background_opacity 0.95
+# background_opacity 0.95
 # background_opacity 1
 # repaint_delay 7
 # input_delay 2
