--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,23 +1,23 @@
-background #141414
+background #111716
 foreground #D2C2AC
 
 cursor #D2C2AC
 
 # Black */
-color0 #212121
-color8 #212121
+color0 #1C2624 
+color8 #1C2624 
 
 # Red */
-color1 #E47267
-color9 #E47267
+color1 #E47C67 
+color9 #E47C67 
 
 # Green */
-color2  #A1E87D
-color10 #A1E87D
+color2  #A2E481 
+color10 #A2E481 
 
 # Yellow */
-color3  #E4CF67
-color11 #E4CF67
+color3  #E4D481
+color11 #E4D481
 
 # Blue */
 color4  #67A0E4
@@ -36,4 +36,4 @@ color7  #808080
 
 # Base1 */
 selection_foreground None
-selection_background #333333
+selection_background #2B3B38
