--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -4,8 +4,8 @@ foreground #D2C2AC
 cursor #D2C2AC
 
 # Black */
-color0 #1C2624 
-color8 #1C2624 
+color0 #415854 
+color8 #415854 
 
 # Red */
 color1 #E47C67 
