nopolybar, term trans, no fade

--- a/picom/.config/picom/desktop.conf
+++ b/picom/.config/picom/desktop.conf
@@ -31,6 +31,6 @@ shadow = true;
 shadow-ignore-shaped = true;
 detect-rounded-corners = true;
 
-fading = true;
-fade-delta = 3;
-#fade-in-step = 0.01;
+fading = false;
+# fade-delta = 3;
+# fade-in-step = 0.01;
