theme changed, padding

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -21,6 +21,7 @@ background_opacity 0.95
 
 map ctrl+backspace send_text all \x17
 # symbol_map U+f101-U+f208 nonicon
+window_padding_width 2
 
 # adjust_column_width 0
 # adjust_line_height 1
