--- a/kitty/.config/kitty/theme.conf
+++ b/kitty/.config/kitty/theme.conf
@@ -1,4 +1,4 @@
-background #111716
+background #111517
 foreground #D2C2AC
 
 cursor #D2C2AC
@@ -36,4 +36,4 @@ color7  #808080
 
 # Base1 */
 selection_foreground None
-selection_background #2B3B38
+selection_background #2B343B
