--- a/picom/.config/picom/laptop.conf
+++ b/picom/.config/picom/laptop.conf
@@ -7,12 +7,47 @@ glx-no-stenctil = true;
 refresh-rate = 59.95;
 unredir-if-possible = true;
 
+shadow = true;
+shadow-radius = 8;
+shadow-opacity = .6
+shadow-offset-x = -3;
+shadow-offset-y = -3;
+
+fading = true;
+fade-in-step = 0.05;
+fade-out-step = 0.05;
+fade-delta = 3;
+
+inactive-opacity-override = false;
+
 blur: {
     method = "dual_kawase";
     # size = 10;
     deviation = true;
 }
 
+corner-radius = 6;
+round-borders = 6;
+
 unredir-if-possible-exclude = [
     "class_g = 'looking-glass-client' && !focused"
-]
+];
+
+wintypes:{
+  dock = {shadow = false; round-borders: 0; corner-radius: 0; };
+  tooltip = { fade = true; shadow = false; };
+  menu = { shadow = false };
+  dropdown_menu = { shadow = false };
+  popup_menu =  { shadow = false };
+};
+
+shadow-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "class_g = 'slop'",
+  "class_g = 'Polybar'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
